handle exception response

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,11 +21,11 @@ spring:
     serialization:
       indent-output: true
 
-logging:
-  level:
-    root: INFO
-    org.springframework.web: DEBUG
-    org.hibernate: INFO
+#logging:
+#  level:
+#    root: INFO
+#    org.springframework.web: DEBUG
+#    org.hibernate: INFO
 jwt:
   expiryHour: 1
   expiryDay: 14
